<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>unitree_mujoco</name>
  <version>1.0.0</version>
  <description>Unitree MuJoCo Simulation with ROS2 Reset Support</description>
  
  <maintainer>Weiji Xie</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  
  <build_depend>mujoco</build_depend>
  <build_depend>unitree_sdk2</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>fmt</build_depend>
  <build_depend>glfw3</build_depend>

  <exec_depend>mujoco</exec_depend>
  <exec_depend>unitree_sdk2</exec_depend>
  <exec_depend>boost</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>fmt</exec_depend>
  <exec_depend>glfw3</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 